--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <script src=""></script>
+        <script src="etch.js"></script>
     </body>
 </html>
