--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <div id="header"></div>
+        <div id="header">
+            <button>Click ME!</button>
+        </div>
         <div id="container"></div>
         <div id="footer"></div>
         <script src="etch.js"></script>
