Create header title and apply flex on header

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <body>
         <div id="header">
             <button>Click ME!</button>
+            <div id="title">Etch-a-Sketch!</div>
         </div>
         <div id="container"></div>
         <div id="footer"></div>
