Create element to count grid elements

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <div id="header">
             <button>Click ME!</button>
             <div id="title">Etch-a-Sketch!</div>
+            <div id="counter"></div>
         </div>
         <div id="container"></div>
         <div id="footer"></div>
