Center title and apply styles

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     </head>
     <body>
         <div id="header">
-            <button>Click ME!</button>
+            <div id="buttonContainer">
+                <button>Click ME!</button>
+            </div>
             <div id="title">Etch-a-Sketch!</div>
             <div id="counter"></div>
         </div>
