Apply clear button label & change button length

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <div id="header">
             <div id="buttonContainer">
-                <button>Click ME!</button>
+                <button>Change # of Elements</button>
             </div>
             <div id="title">Etch-a-Sketch!</div>
             <div id="counter"></div>
