--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <div id="header">
             <div id="buttonContainer">
-                <button id="elementButton">Change # of Elements</button>
+                <button id="elementButton">Change Grid Size</button>
             </div>
             <div id="title">Etch-a-Sketch!</div>
             <div id="counter"></div>
