--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <button id="elementButton">Change Grid Size</button>
             </div>
             <div id="title">Etch-a-Sketch!</div>
-            <div button id="colorChange">Color Mode: Off</div>
+            <div button id="colorChange">Color Mode: Off</button>
         </div>
         <div id="container"></div>
         <div id="footer"></div>
