Fix consistency issues with id selectors
Forgot that multiple elements cannot share Ids so had to change an Id
selector into a type selector.

--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     </head>
     <body>
         <div id="header">
-            <div id="buttonContainer">
+            <div class="buttonContainer">
                 <button id="elementButton">Change Grid Size</button>
             </div>
             <div id="title">Etch-a-Sketch!</div>
-            <div button id="colorChange">Color Mode: Off</button>
+            <div class="buttonContainer">
+                <button id="colorChange">Color Mode: Off</button>
+            </div>
         </div>
         <div id="container"></div>
         <div id="footer"></div>
