Correct spelling error

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             </div>
             <div id="title">Etch-a-Sketch!</div>
             <div class="buttonContainer">
-                <button id="colorChange">Color Mode: Off</button>
+                <button id="colorChange">Colour Mode: Off</button>
             </div>
         </div>
         <div id="container"></div>
