Add grid length counter
Encountered issue where grid units that revert back to the original
colour after grid size has changed do not changed back to the size
given in the build grid function.
My thought to solve this issue is creating a counter which I can then
reference through the js

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 <button id="colorChange">Colour Mode: Off</button>
             </div>
         </div>
+        <div id="unitCounter">Grid Length: 4</div>
         <div id="container"></div>
         <div id="footer"></div>
         <script src="etch.js"></script>
