--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
                 <button id="colorChange">Colour Mode: Off</button>
             </div>
         </div>
-        <div id="unitCounter">Grid Length: 4</div>
-        <div id="container"></div>
+        <div id="main">
+            <div id="unitCounter">Grid Length: 4</div>
+            <div id="container"></div>
+        </div>
         <div id="footer"></div>
         <script src="etch.js"></script>
     </body>
